src/objects/CP_Application_Request__c.object
<CustomObject>
    <description>Corporate Payments BOCA application request</description>
    <fields>
        <fullName>ABA_Routing_Number__c</fullName>
        <label>ABA Routing #</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Placeholder for Account Number to be used during onboarding</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Placeholder for Account Number to be used during onboarding</inlineHelpText>
        <label>Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CorporatePayments Application Requests</relationshipLabel>
        <relationshipName>CorporatePayments_Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adverse_Action_Code__c</fullName>
        <label>Adverse Action Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>A7</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>E2</fullName>
                </value>
                <value>
                    <fullName>E3</fullName>
                </value>
                <value>
                    <fullName>E4</fullName>
                </value>
                <value>
                    <fullName>F1</fullName>
                </value>
                <value>
                    <fullName>F2</fullName>
                </value>
                <value>
                    <fullName>F3</fullName>
                </value>
                <value>
                    <fullName>F4</fullName>
                </value>
                <value>
                    <fullName>F5</fullName>
                </value>
                <value>
                    <fullName>F6</fullName>
                </value>
                <value>
                    <fullName>F7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Channel__c</fullName>
        <formula>IF(Opportunity__r.SourceSystem__c == &quot;Salesforce&quot;, &quot;Traditional&quot;, 
IF(AND(Opportunity__r.SourceSystem__c== &quot;BOCA&quot;, Sales_Rep__r.Alias == &quot;sinte&quot;, Opportunity__r.Owner.Alias == &quot;sinte&quot;), &quot;BOCA&quot;, 
IF(AND(Opportunity__r.SourceSystem__c == &quot;BOCA&quot;, Sales_Rep__r.Alias == &quot;sinte&quot;, Opportunity__r.Owner.Alias != &quot;sinte&quot;), &quot;BOCA Assisted&quot;, 
IF(AND(Opportunity__r.SourceSystem__c == &quot;BOCA&quot;, Sales_Rep__c == Opportunity__r.OwnerId), &quot;BOCA Solicited&quot;, &quot;&quot; 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Decisioned_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Decisioned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Signer_IP_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Signer IP Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Stage__c</fullName>
        <label>Application Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Adjudication</fullName>
                </value>
                <value>
                    <fullName>Credit Follow-up</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPAV_Check__c</fullName>
        <label>BPAV Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPAV_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BPAV Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficial_Owner_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beneficial Owner Entity</label>
        <referenceTo>Beneficial_Owner_Entity__c</referenceTo>
        <relationshipLabel>CorporatePayments Application Requests</relationshipLabel>
        <relationshipName>CorporatePayments_Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Beneficial_Owner_Status__c</fullName>
        <formula>TEXT(Beneficial_Owner_Entity__r.Verification_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beneficial Owner Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <label>Billing Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bureau_Tax_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bureau Tax ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checking_Account_Number__c</fullName>
        <label>Checking Account #</label>
        <length>14</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Company_Legal_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Legal Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Company_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if the application is being worked.</description>
        <inlineHelpText>Used to indicate if the application is being worked.</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CP_App_Compliance_Analyst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_Decision_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Compliance Decision Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Decision__c</fullName>
        <label>Compliance Decision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                    <isActive>false</isActive>
                    <label>Declined</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <formula>Opportunity__r.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmation Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Score_Source__c</fullName>
        <label>Consumer Score Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Experian</fullName>
                </value>
                <value>
                    <fullName>Equifax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consumer_Score__c</fullName>
        <label>Consumer Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Control_Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Control Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CP_App_Credit_Analyst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Approval_Code__c</fullName>
        <label>Credit Approval Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financials</fullName>
                </value>
                <value>
                    <fullName>Commercial Credit</fullName>
                </value>
                <value>
                    <fullName>Divvy Recourse</fullName>
                </value>
                <value>
                    <fullName>Prepay</fullName>
                </value>
                <value>
                    <fullName>Personal Guaranty</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>Corporate Guaranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Decision_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Decision Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Decision_Recommendation__c</fullName>
        <label>Credit Decision Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recommend Approve</fullName>
                </value>
                <value>
                    <fullName>Recommend Decline</fullName>
                </value>
                <value>
                    <fullName>Recommend Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Decision__c</fullName>
        <label>Credit Decision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approved - Counter Accepted</fullName>
                </value>
                <value>
                    <fullName>Approved - Counter Offer</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <label>Approved - Requested</label>
                </value>
                <value>
                    <fullName>Approved - Secured Accepted</fullName>
                </value>
                <value>
                    <fullName>Approved - Secured Requested</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Declined - Prepay/Secured Only</fullName>
                </value>
                <value>
                    <fullName>Refused - Counter Offer</fullName>
                </value>
                <value>
                    <fullName>Refused - Secured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <formula>Credit_Line_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Approved__c</fullName>
        <label>Credit Line Approved</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Check__c</fullName>
        <label>Credit Line Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Line_Recommendation__c</fullName>
        <label>Credit Line Recommendation</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Requested__c</fullName>
        <label>Credit Line Requested</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNB_CSAD_High_Credit__c</fullName>
        <label>DNB CSAD High Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNB_City_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB City Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Confidence_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Confidence Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Credit_Line_Recommendation__c</fullName>
        <label>DNB Credit Line Recommendation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNB_Lookup_Hits__c</fullName>
        <label>DNB Lookup Hits</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Lookup__c</fullName>
        <formula>HYPERLINK(&apos;/apex/DNBAdvancedLookup?applicationId=&apos; + Id, &apos;View Matches&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNB Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Match_Grade__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Match Grade</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Match_Score__c</fullName>
        <label>DNB Match Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Name_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Name Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Name_Match_Grade__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Name Match Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Postal_Code_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Postal Code Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Reason_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Reason Code</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DNB_Resolution_Check__c</fullName>
        <label>DNB Resolution Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNB_Resolved_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_DUNS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolved DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolved Business Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Resolved_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_SBFE_High_Credit__c</fullName>
        <label>DNB SBFE High Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNB_SBRI_Card_Score__c</fullName>
        <label>DNB SBRI Card Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_SBRI_Check__c</fullName>
        <label>DNB SBRI Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNB_SBRI_High_Credit__c</fullName>
        <label>DNB SBRI High Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNB_SBRI_Score__c</fullName>
        <label>DNB SBRI Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Score__c</fullName>
        <label>DNB Custom Model Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_State_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB State Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Street_Name_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Street Name Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Street_Number_Match_Data_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DNB Street Number Match Data Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Trade_Lines__c</fullName>
        <label>DNB # of Trade Lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Forte__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Sent to Forte</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Divvy_Country__c</fullName>
        <formula>&quot;USA&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Divvy Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Divvy_Currency_Type__c</fullName>
        <formula>&quot;US&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Divvy Currency Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doing_Business_As__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Doing Business As</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exec_Sponsor_Phone__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Business_Phone__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exec Sponsor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor_if_different_from_Adm__c</fullName>
        <formula>First_Name__c + &quot; &quot; + Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executive Sponsor (if different from Adm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Exposure_Check__c</fullName>
        <label>Existing Exposure Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experian_Data__c</fullName>
        <description>All data from the Experian response, save the FICO score, is not currently being used and thus being stored all together here.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Experian Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Experian_Premier_Attributes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Experian Premier Attributes</label>
        <length>9000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FPS_Status__c</fullName>
        <label>FPS Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Institution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Institution</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forte_Check__c</fullName>
        <label>Forte Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forte_Response_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Forte Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forte_Response_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Forte Response Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Forte_Response_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Forte Response Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fraud Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CP_App_Fraud_Analyst</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>